@@ -11,6 +11,8 @@ PHP                                                                        NEWS
 - Fixed a bug in mysqli_stmt_execute() (type conversion with NULL values). (Georg)
 - Fixed segfault in mysqli_fetch_field_direct() when invalid field offset 
   is passed. (Tony)
+- Fixed posix_getsid() & posix_getpgid() to return sid & pgid instead 
+  of true. (Tony)
 - Fixed bug #31710 (Wrong return values for mysqli_autocommit/commit/rollback).
   (Georg)
 - Fixed bug #31705 (parse_url() does not recognize http://foo.com#bar). (Ilia)
